[gd_scene load_steps=2 format=3 uid="uid://p671ld8udgbo"]

[ext_resource type="Script" path="res://test.gd" id="1_gda8d"]

[node name="Test" type="Node"]
script = ExtResource("1_gda8d")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 44
text = "Quiver Player Accounts Test"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RegisterGuestButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Register guest account"

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Register account (not supported yet)"

[node name="LogoutButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Log out"

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.647059, 0.552941, 0.203922, 1)
text = "Status	"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/RegisterGuestButton" to="." method="_on_register_guest_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
